test/libsolidity/syntaxTests/nameAndTypeResolution/329_rational_as_exponent_value_signed.sol
contract test {
    function f() public {
        fixed g = 2 ** -2.2;
    }
}
// ----
// UnimplementedFeatureError: Not yet implemented - FixedPointType.
